--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 
-spring.datasource.url=jdbc:postgresql://dpg-{custom-url}.render.com:5432/{name_database}
-spring.datasource.username=your_username
-spring.datasource.password=your_passeword
+spring.datasource.url=jdbc:postgresql://dpg-d1nijnje5dus73atd110-a.render.com:5432/challengedb_ht42
+spring.datasource.username=wclg
+spring.datasource.password=sqRpuykuo99NfotCCKXnvsKTNHomYxfP
 spring.datasource.driver-class-name=org.postgresql.Driver
